--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,136 @@
 body {
-    background-color: lightgray;
+    background: url('../images/fondImg.jpeg');
+    background-size: cover;
+    color: white;
+}
+
+a{
+  color: black;
+  text-decoration-style: none;
+}
+
+.dropbtn {
+  padding: 16px;
+  font-size: 2rem;
+  border: none;
+  cursor: pointer;
+}
+  
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: fixed;
+  display: inline-block;
+}
+  
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: lightslategrey;
+  border: solid 1px black;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+  
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  font-size: x-large;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+  
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Home page */
+.homeHeader img{
+  max-width: 20vw;
+  margin-bottom: 1rem;
+}
+
+.homeHeader{
+  text-align: center;
+}
+
+.main{
+  background-color:rgba(255, 250, 250, 0.295);
+  border: solid 1px black;
+  margin: 1rem;
+  padding: 1rem;
+  color: black;
+}
+
+.main p{
+  word-wrap: break-word;
+}
+
+.homeText{
+  font-size: 3vw;
+  margin: 0;
+  text-align: center;
+}
+
+/* image sizing */
+.imageProject{
+  text-align: center;
+}
+
+.imageProject img{
+  max-width: 65%;
+  margin-bottom: 1rem;
+}
+
+.titleProject{
+  text-align: center;
+  font-size: x-large;
+}
+
+ul{
+  list-style: none;
+   padding: 0;
+}
+
+ul li{
+  margin: 1rem;
+}
+
+/* footer */
+
+.tool, .foot img, .toolHome img{
+  width: 40px;
+  display: inline;
+}
+
+.foot{
+  position: fixed;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(24, 39, 53);
+  height: 6vh;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+embed{
+  min-width: 100%;
+  height: 100vh;
+}
+
+.toolHome{
+  display: flex;
+  justify-content: space-around;
+
 }
