fix acceuil to accueil

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,7 +1,7 @@
 <div class="dropdown">
     <button class="dropbtn"><i class="fas fa-angle-double-right"></i></button>
     <div class="dropdown-content">
-        <a href="{{ path('home') }}">Acceuil</a>
+        <a href="{{ path('home') }}">Accueil</a>
         <a href="{{ path('project_index') }}">Projets</a>
         <a href="{{ path('customer_index') }}">Clients</a>
         <a href="{{ path('cv_show') }}">Curriculum</a>
