--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,8 +1,8 @@
 <div class="foot">
     <a href="https://www.linkedin.com/in/tarik-el-hantiti">
-        <img src="{{ asset('build/images/linked-in-.svg') }}" alt="Linked in"/>
+        <img src="{{ asset('build/images/tools/linked-in-.svg') }}" alt="Linked in"/>
     </a>
     <a href="https://github.com/TarikElha">
-        <img src="{{ asset('build/images/logo-github.png') }}" alt="Github"/>
+        <img src="{{ asset('build/images/tools/logo-github.png') }}" alt="Github"/>
     </a>
 </div>
