--- a/templates/curriculum.html.twig
+++ b/templates/curriculum.html.twig
@@ -1,6 +1,7 @@
 {% extends "base.html.twig" %}
-{% block title %}Portfolio{% endblock %}
+{% block title %}Portfolio de Tarik{% endblock %}
 {% block body %}
+    <h1 class="titleProject">Curriculum Vitae</h1>
     <div class="main">
         <embed src="{{ asset('build/images/cv.pdf') }}" type='application/pdf'/>
     </div>
