--- a/templates/customer/index.html.twig
+++ b/templates/customer/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Clients{% endblock %}
+{% block title %}Portfolio de Tarik{% endblock %}
 
 {% block body %}
-    <h1 class="titleProject">Voici les clients liés à mes projets</h1>
+    <h1 class="titleProject">Mes clients</h1>
         {% for customer in customers %}
             <div class="main">
                 <div class="imageProject">
