--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Portfolio{% endblock %}
+{% block title %}Portfolio de Tarik{% endblock %}
 {% block body %}
     <div class="homeHeader">
         <img src="{{ asset('build/images/photo-portrait.png') }}" alt="Photo de profil de Tarik EL HANTITI"/>
