--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Project index{% endblock %}
+{% block title %}Portfolio de Tarik{% endblock %}
 
 {% block body %}
-    <h1>Projets</h1>
+    <h1 class="titleProject">Projets</h1>
         {% for project in projects %}
             <div class="main">
                 <div class="imageProject">
